--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 
     <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
     <script type="text/javascript" charset="utf-8">
-
+ function  onBodyLoad () {
                 documento . addEventListener ( " deviceready " , onDeviceReady, false );
-            
+            }
     // PhoneGap está listo
     //
     function  onDeviceReady () {
