--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ function removeFile() {
    
     </script>
   </head>
-  <body>
+  <body onload="onBodyLoad ()">
     <button id = "createFile">CREATE FILE</button>
     <button id = "writeFile">WRITE FILE</button>
     <button id = "readFile">READ FILE</button>
