--- a/index.html
+++ b/index.html
@@ -3,13 +3,109 @@
     <title>Contact Example</title>
 
     <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
-    <script type="text/javascript" charset="utf-8" src="index.js"> </script>
+    <script type="text/javascript" charset="utf-8" >
+    function  onBodyLoad () {
+                documento . addEventListener ( " deviceready " , onDeviceReady, false );
+            }
+    function  onDeviceReady () {
+       alert("La aplicacion esta corriendo")
+    }
+
+    function createFile() {
+   var type = window.TEMPORARY;
+   var size = 5*1024*1024;
+   window.requestFileSystem(type, size, successCallback, errorCallback)
+
+   function successCallback(fs) {
+      fs.root.getFile('log.txt', {create: true, exclusive: true}, function(fileEntry) {
+         alert('File creation successfull!')
+      }, errorCallback);
+   }
+
+   function errorCallback(error) {
+      alert("ERROR: " + error.code)
+   }
+	
+}
+
+function writeFile() {
+   var type = window.TEMPORARY;
+   var size = 5*1024*1024;
+   window.requestFileSystem(type, size, successCallback, errorCallback)
+
+   function successCallback(fs) {
+      fs.root.getFile('log.txt', {create: true}, function(fileEntry) {
+
+         fileEntry.createWriter(function(fileWriter) {
+            fileWriter.onwriteend = function(e) {
+               alert('Write completed.');
+            };
+
+            fileWriter.onerror = function(e) {
+               alert('Write failed: ' + e.toString());
+            };
+
+            var blob = new Blob(['Lorem Ipsum'], {type: 'text/plain'});
+            fileWriter.write(blob);
+         }, errorCallback);
+      }, errorCallback);
+   }
+
+   function errorCallback(error) {
+      alert("ERROR: " + error.code)
+   }
+}
+
+function readFile() {
+   var type = window.TEMPORARY;
+   var size = 5*1024*1024;
+   window.requestFileSystem(type, size, successCallback, errorCallback)
+
+   function successCallback(fs) {
+      fs.root.getFile('log.txt', {}, function(fileEntry) {
+
+         fileEntry.file(function(file) {
+            var reader = new FileReader();
+
+            reader.onloadend = function(e) {
+               var txtArea = document.getElementById('textarea');
+               txtArea.value = this.result;
+            };
+            reader.readAsText(file);
+         }, errorCallback);
+      }, errorCallback);
+   }
+
+   function errorCallback(error) {
+      alert("ERROR: " + error.code)
+   }
+}
+
+function removeFile() {
+   var type = window.TEMPORARY;
+   var size = 5*1024*1024;
+   window.requestFileSystem(type, size, successCallback, errorCallback)
+
+   function successCallback(fs) {
+      fs.root.getFile('log.txt', {create: false}, function(fileEntry) {
+
+         fileEntry.remove(function() {
+            alert('File removed.');
+         }, errorCallback);
+      }, errorCallback);
+   }
+
+   function errorCallback(error) {
+      alert("ERROR: " + error.code)
+   }
+} 
+</script>
   </head>
   <body onload="onBodyLoad ()">
-    <button id = "createFile">CREATE FILE</button>
-    <button id = "writeFile">WRITE FILE</button>
-    <button id = "readFile">READ FILE</button>
-    <button id = "removeFile">DELETE FILE</button>
-    <textarea id = "textarea"></textarea>
+    <button id = "createFile" onclick="createFile()">CREATE FILE</button>
+    <button id = "writeFile"  onclick="writeFile()">WRITE FILE</button>
+    <button id = "readFile"  onclick="readFile()">READ FILE</button>
+    <button id = "removeFile"  onclick="removeFile()">DELETE FILE</button>
+    <textarea id = "textarea" ></textarea>
   </body>
 </html>
