--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     }
 
     function createFile() {
-   var type = window.TEMPORARY;
+   var type = window.PERSISTENT;
    var size = 5*1024*1024;
    window.requestFileSystem(type, size, successCallback, errorCallback)
 
    function successCallback(fs) {
-      fs.root.getFile('log.txt', {create: true, exclusive: true}, function(fileEntry) {
+      fs.root.getFile('log2.txt', {create: true, exclusive: true}, function(fileEntry) {
          alert('File creation successfull!')
       }, errorCallback);
    }
@@ -29,12 +29,12 @@
 }
 
 function writeFile() {
-   var type = window.TEMPORARY;
+   var type = LocalFileSystem.PERSISTENT;
    var size = 5*1024*1024;
    window.requestFileSystem(type, size, successCallback, errorCallback)
 
    function successCallback(fs) {
-      fs.root.getFile('log.txt', {create: true}, function(fileEntry) {
+      fs.root.getFile('log2.txt', {create: true}, function(fileEntry) {
 
          fileEntry.createWriter(function(fileWriter) {
             fileWriter.onwriteend = function(e) {
