--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
     <script type="text/javascript" charset="utf-8" >
     function  onBodyLoad() {
-                documento.addEventListener("deviceready",onDeviceReady,false);
+        document.addEventListener("deviceready", onDeviceReady, false);
             }
     function  onDeviceReady() {
        alert("La aplicacion esta corriendo")
@@ -14,10 +14,10 @@
     function createFile() {
    var type = window.TEMPORARY;
    var size = 5*1024*1024;
-   window.requestFileSystem(LocalFileSystem.PERSISTENT, 0, successCallback, errorCallback)
+   window.requestFileSystem(type, size, successCallback, errorCallback)
 
    function successCallback(fs) {
-      fs.root.getFile('log2.txt', {create: true, exclusive: true}, function(fileEntry) {
+      fs.root.getFile('log.txt', {create: true, exclusive: true}, function(fileEntry) {
          alert('File creation successfull!')
       }, errorCallback);
    }
@@ -31,10 +31,10 @@
 function writeFile() {
    var type = window.TEMPORARY;
    var size = 5*1024*1024;
-   window.requestFileSystem(type, 0, successCallback, errorCallback)
+   window.requestFileSystem(type, size, successCallback, errorCallback)
 
    function successCallback(fs) {
-      fs.root.getFile('log2.txt', {create: true}, function(fileEntry) {
+      fs.root.getFile('log.txt', {create: true}, function(fileEntry) {
 
          fileEntry.createWriter(function(fileWriter) {
             fileWriter.onwriteend = function(e) {
