--- a/index.html
+++ b/index.html
@@ -27,6 +27,22 @@
    }
 	
 }
+function createFile2() {
+
+    window.requestFileSystem(LocalFileSystem.PERSISTENT, 0, function (fs) {
+
+alert('file system open: ' + fs.name);
+fs.root.getFile("newPersistentFile.txt", { create: true, exclusive: false }, function (fileEntry) {
+
+    alert("fileEntry is file?" + fileEntry.isFile.toString());
+    // fileEntry.name == 'someFile.txt'
+    // fileEntry.fullPath == '/someFile.txt'
+    writeFile(fileEntry, null);
+
+}, onErrorCreateFile);
+
+}, onErrorLoadFs);
+}
 
 function writeFile() {
    var type = window.TEMPORARY;
@@ -45,7 +61,7 @@ function writeFile() {
                alert('Write failed: ' + e.toString());
             };
 
-            var blob = new Blob(['Lorem Ipsum'], {type: 'text/plain'});
+            var blob = new Blob(['Practica en PhoneGap'], {type: 'text/plain'});
             fileWriter.write(blob);
          }, errorCallback);
       }, errorCallback);
@@ -102,10 +118,14 @@ function removeFile() {
 </script>
   </head>
   <body onload="onBodyLoad ()">
+    <center>
+    <img src="images.png"><br>
     <button id = "createFile" onclick="createFile()">CREATE FILE</button>
+    <button id = "createFile" onclick="createFile2()">CREATE FILE</button><br>
     <button id = "writeFile"  onclick="writeFile()">WRITE FILE</button>
-    <button id = "readFile"  onclick="readFile()">READ FILE</button>
-    <button id = "removeFile"  onclick="removeFile()">DELETE FILE</button>
+    <button id = "readFile"  onclick="readFile()">READ FILE</button><br>
+    <button id = "removeFile"  onclick="removeFile()">DELETE FILE</button><br>
     <textarea id = "textarea" ></textarea>
+</center>
   </body>
 </html>
