--- a/index.html
+++ b/index.html
@@ -29,20 +29,20 @@
 }
 function createFile2() {
 alert("Hola");
-window.requestFileSystem(LocalFileSystem.PERSISTENT, 0, function (fs) {
+window.requestFileSystem(LocalFileSystem.PERSISTENT, 0,  successCallback, errorCallback)
 
-alert('file system open: ' + fs.name);
+function successCallback(fs){
+    alert('file system open: ' + fs.name);
 fs.root.getFile("newPersistentFile.txt", { create: true, exclusive: false }, function (fileEntry) {
 
     alert("fileEntry is file?" + fileEntry.isFile.toString());
     // fileEntry.name == 'someFile.txt'
     // fileEntry.fullPath == '/someFile.txt'
-    writeFile(fileEntry, null);
-
-}, onErrorCreateFile);
-
-}, onErrorLoadFs);
+    },errorCallback);
 }
+function errorCallback(error){
+    alert("ERROR2: "  + error.code)
+}}
 
 function writeFile() {
    var type = window.TEMPORARY;
