--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@ function removeFile() {
     <center>
     <img src="images.png"><br>
     <button id = "createFile" onclick="createFile()">CREATE FILE</button>
-    <button id = "createFile2" onclick="createFile2()">CREATE FILE2</button><br>
+    <button id = "createFile2" onclick="createFile2()">CREATE FILE2</button><br><br>
     <button id = "writeFile"  onclick="writeFile()">WRITE FILE</button>
-    <button id = "readFile"  onclick="readFile()">READ FILE</button><br>
-    <button id = "removeFile"  onclick="removeFile()">DELETE FILE</button><br>
+    <button id = "readFile"  onclick="readFile()">READ FILE</button><br><br>
+    <button id = "removeFile"  onclick="removeFile()">DELETE FILE</button><br><br>
     <textarea id = "textarea" ></textarea>
 </center>
   </body>
