--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ fs.root.getFile("newPersistentFile.txt", { create: true, exclusive: false }, fun
     // fileEntry.fullPath == '/someFile.txt'
     },errorCallback2);
 }
-function errorCallback(error){
+function errorCallback2(error){
     alert("ERROR2: "  + error.code)
 }}
 
